--- a/MAKAROV/makarov_gp/templates/general/index.html
+++ b/MAKAROV/makarov_gp/templates/general/index.html
@@ -22,13 +22,14 @@
               <img src={% static 'libs/assets/img/Banner_logo.svg' %} class="rounded img-fluid mb-4" style="max-width: 40%;">
               <div class="row container bg-light p-3 rounded">
 
-                <form class="row g-3" novalidate>
+                <form method="post" class="row g-3" novalidate>
+                  {% csrf_token %}
                   <div class="col-md-4">
                     <label for="trip-input" class="form-label">{% trans "Trip" %}</label>
-                    <select class="form-select" id="trip-input" required>
+                    <select class="form-select" id="trip-input" required name="trip">
                       <option selected disabled value="">{% trans "Choose..." %}</option>
-                      <option>{% trans "Round-Trip" %}</option>
-                      <option>{% trans "One-way ticket" %}</option>
+                      <option value="round-trip">{% trans "Round-Trip" %}</option>
+                      <option value="one-way">{% trans "One-way ticket" %}</option>
                     </select>
                     <div class="invalid-feedback">
                         {% trans "Please select a valid option." %}
@@ -38,10 +39,10 @@
 
                   <div class="col-md-4">
                     <label for="departure-input" class="form-label">{% trans "Departure" %}</label>
-                    <select class="form-select" id="departure-input" required>
+                    <select class="form-select" id="departure-input" required name="departure">
                       <option selected disabled value="">{% trans "Choose..." %}</option>
                       {% for airport in airports %}
-                        <option value="{{ airports.code_pays }}">{{ airport.nom }}</option>
+                        <option value="{{ airport.id }}">{{ airport.nom }}</option>
                       {% endfor %}
                     </select>
                     <div class="invalid-feedback">
@@ -52,10 +53,10 @@
 
                   <div class="col-md-4">
                     <label for="arrival-input" class="form-label">{% trans "Arrival" %}</label>
-                    <select class="form-select" id="arrival-input" required>
+                    <select class="form-select" id="arrival-input" required name="arrival">
                       <option selected disabled value="">{% trans "Choose..." %}</option>
                       {% for airport in airports %}
-                        <option value="{{ airport.code_pays }}">{{ airport.nom }}</option>
+                        <option value="{{ airport.id }}">{{ airport.nom }}</option>
                       {% endfor %}
                     </select>
                     <div class="invalid-feedback">
@@ -66,7 +67,7 @@
 
                   <div class="col-md-3">
                     <label for="date-input" class="form-label">{% trans "Date" %}</label>
-                    <input type="date" class="form-control" id="date-input" required>
+                    <input type="date" class="form-control" id="date-input" required name="date">
                     <div class="invalid-feedback">
                         {% trans "Please select a date." %}
                     </div>
@@ -75,7 +76,7 @@
 
                   <div class="col-md-3">
                     <label for="amount-adults" class="form-label">{% trans "Adults" %}</label>
-                    <select class="form-select" id="amount-adults" required>
+                    <select class="form-select" id="amount-adults" required name="adults">
                       <option selected disabled value="1">1</option>
                       <option value="2">2</option>
                       <option value="3">3</option>
@@ -90,7 +91,7 @@
 
                   <div class="col-md-3">
                     <label for="amount-kids" class="form-label">{% trans "Kids" %}</label>
-                    <select class="form-select" id="amount-kids" required>
+                    <select class="form-select" id="amount-kids" required name="kids">
                       <option selected disabled value="0">0</option>
                       <option value="1">1</option>
                       <option value="2">2</option>
@@ -105,11 +106,11 @@
 
                   <div class="col-md-3">
                     <label for="class" class="form-label">{% trans "Class" %}</label>
-                    <select class="form-select" id="class" required>
+                    <select class="form-select" id="class" required name="class">
                       <option selected disabled value="">{% trans "Choose..." %}</option>
-                      <option>{% trans "Economy" %}</option>
-                      <option>{% trans "Business" %}</option>
-                      <option>{% trans "First Class" %}</option>
+                      <option value="E">{% trans "Economy" %}</option>
+                      <option value="B">{% trans "Business" %}</option>
+                      <option value="F">{% trans "First Class" %}</option>
                     </select>
                     <div class="invalid-feedback">
                         {% trans "Please select a travel class." %}
@@ -117,7 +118,7 @@
                   </div>
 
                   <div class="col-12">
-                    <button id="search-button" class="btn btn-primary">{% trans "Search for a flight" %}</button>
+                    <button id="search-button" class="btn btn-primary" type="submit">{% trans "Search for a flight" %}</button>
                   </div>
                 </form>
 
